Update and rename .example.env to .env

--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@
 PORT=3000
 
 # Optional - The name of the site where Kutt is hosted
-SITE_NAME=Kutt
+SITE_NAME=ZQ shortlink
 
 # Optional - The domain that this website is on
 DEFAULT_DOMAIN=localhost:3000
 
 # Required - A passphrase to encrypt JWT. Use a random long string
-JWT_SECRET=
+JWT_SECRET=YCDmpWASJhmq1OvAqdDgJI9umPF03C2y5ebvXdh9GMA=
 
 # Optional - Database client. Available clients for the supported databases:
 # pg | better-sqlite3 | mysql2
@@ -32,7 +32,7 @@ DB_POOL_MIN=0
 DB_POOL_MAX=10
 
 # Optional - Generated link length
-LINK_LENGTH=6
+LINK_LENGTH=5
 
 # Optional - Alphabet used to generate custom addresses
 # Default value omits o, O, 0, i, I, l, 1, and j to avoid confusion when reading the URL
@@ -61,7 +61,7 @@ DISALLOW_ANONYMOUS_LINKS=true
 # Optional - This would be shown to the user on the settings page
 # It's only for display purposes and has no other use
 SERVER_IP_ADDRESS=
-SERVER_CNAME_ADDRESS=
+SERVER_CNAME_ADDRESS=go.9362006.xyz
 
 # Optional - Use HTTPS for links with custom domain
 # It's on you to generate SSL certificates for those domains manually, at least on this version for now
