--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=3000
 SITE_NAME=ZQ shortlink
 
 # Optional - The domain that this website is on
-DEFAULT_DOMAIN=localhost:3000
+DEFAULT_DOMAIN=https://go.9362006.xyz/
 
 # Required - A passphrase to encrypt JWT. Use a random long string
 JWT_SECRET=YCDmpWASJhmq1OvAqdDgJI9umPF03C2y5ebvXdh9GMA=
